<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:id="@+id/btnHistory"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="History"
        />
    <TextView
        android:id="@+id/textViewMain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_calculator"
        android:layout_below="@id/btnHistory"
        android:gravity="end"
        />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textViewMain"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_7"
                android:id="@+id/btn7"
                android:layout_column="0"
                android:layout_weight="1"
                android:onClick="Click" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_8"
                android:id="@+id/btn8"
                android:layout_column="1"
                android:layout_weight="1"
                android:onClick="Click"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_9"
                android:id="@+id/btn9"
                android:layout_column="2"
                android:layout_weight="1"
                android:onClick="Click"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_divide"
                android:id="@+id/btnDivide"
                android:layout_column="3"
                android:layout_weight="1"
                android:onClick="Click" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_del"
                android:id="@+id/btnDel"
                android:layout_column="4"
                android:layout_weight="1"
                android:onClick="Click" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_4"
                android:id="@+id/btn4"
                android:layout_column="0"
                android:layout_weight="1"
                android:onClick="Click"
                />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_5"
                android:id="@+id/btn5"
                android:layout_column="1"
                android:layout_weight="1"
                android:onClick="Click" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_6"
                android:id="@+id/btn6"
                android:layout_column="2"
                android:layout_weight="1"
                android:onClick="Click" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_multi"
                android:id="@+id/btnMulti"
                android:layout_column="3"
                android:layout_weight="1"
                android:onClick="Click" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_par_start"
                android:id="@+id/btnParStart"
                android:layout_column="3"
                android:layout_weight="1"
                android:onClick="Click" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_1"
                android:id="@+id/btn1"
                android:layout_column="0"
                android:layout_weight="1"
                android:onClick="Click"
                />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_2"
                android:id="@+id/btn2"
                android:layout_column="1"
                android:layout_weight="1"
                android:onClick="Click" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_3"
                android:id="@+id/btn3"
                android:layout_column="2"
                android:layout_weight="1"
                android:onClick="Click" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_minus"
                android:id="@+id/btnMinus"
                android:layout_column="3"
                android:layout_weight="1"
                android:onClick="Click" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_par_end"
                android:id="@+id/btnParEnd"
                android:layout_column="3"
                android:layout_weight="1"
                android:onClick="Click" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_dot"
                android:id="@+id/btnDot"
                android:layout_column="0"
                android:layout_weight="1"
                android:onClick="Click"
                />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_0"
                android:id="@+id/btn0"
                android:layout_column="1"
                android:layout_weight="1"
                android:onClick="Click" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_pi"
                android:id="@+id/btnPi"
                android:layout_column="2"
                android:layout_weight="1"
                android:onClick="Click"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_plus"
                android:id="@+id/btnPlus"
                android:layout_column="3"
                android:layout_weight="1"
                android:onClick="Click" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_equal"
                android:id="@+id/btnEqual"
                android:layout_column="3"
                android:layout_weight="1"
                android:onClick="Click" />
        </TableRow>
    </TableLayout>


</RelativeLayout>
